--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>"Chad Park's website"</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <bg></bg>
