--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <bg></bg>
+    <p>"welcome to Chad's website"</p>
   </body>
 </html>
