--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>"Chad Park's website"</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>"welcome to Chad's website"</p>
+    <p>welcome to Chad's website</p>
   </body>
 </html>
