--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>welcome to Chad's website</p>
+    <p style="color:white;">welcome to Chad's website</p>
   </body>
 </html>
