--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
+    <link rel="stylesheet" type=“text/css” href="style.css">
     <title>"Chad Park's website"</title>
   </head>
   <body>
-    <link rel="stylesheet" href="style.css">
     <p style="color:white;">welcome to Chad's website</p>
   </body>
 </html>
