--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <meta charset="UTF-8">
   <head>
     <link rel="stylesheet" type=“text/css” href="style.css">
     <title>"Chad Park's website"</title>
