--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <meta charset="UTF-8">
   <head>
-    <link rel="stylesheet" type=“text/css” href="style.css">
+    <link rel="stylesheet" type=“text/css” href="styless.css">
     <title>"Chad Park's website"</title>
   </head>
   <body>
