--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>"Chad Park's website"</title>
   </head>
   <body>
-    <p style="color:white;">welcome to Chad's website</p>
+    <p>welcome to Chad's website</p>
   </body>
 </html>
