--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" type=“text/css” href="styless.css">
     <title>"Chad Park's website"</title>
   </head>
   <body>
